samples/_failures_safe/1761607997_086846_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74a48488.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_74a48488.c:136:13: error: expected expression at end of input
  136 |             !matrix_get(a, 1, 0, &a10) || !matrix_get(a, 1, 1, &a11)) return
      |             ^
./samples/SAFE/__tmp_74a48488.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74a48488.c:136:13: error: expected declaration or statement at end of input
